// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on edit with permissions 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header with-back"
  >
    <Connect(BlockableLink)
      className="fa fa-chevron-left back"
      to="/admin_console/permissions/schemes"
    />
    <FormattedMessage
      defaultMessage="Team Scheme"
      id="admin.permissions.teamScheme"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="[Team Override Schemes](!https://about.mattermost.com/default-team-override-scheme) set the permissions for Team Admins, Channel Admins and other members in specific teams. Use a Team Override Scheme when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
          id="admin.permissions.teamScheme.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Scheme Details"
            id="admin.permissions.teamScheme.schemeDetailsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the name and description for this scheme."
            id="admin.permissions.teamScheme.schemeDetailsDescription"
            values={Object {}}
          />
        </span>
      </div>
    </div>
    <div
      className="team-scheme-details"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-name"
        >
          <FormattedMessage
            defaultMessage="Scheme Name:"
            id="admin.permissions.teamScheme.schemeNameLabel"
            values={Object {}}
          />
        </label>
        <input
          className="form-control"
          id="scheme-name"
          onChange={[Function]}
          placeholder="Scheme Name"
          type="text"
          value="Test scheme"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-description"
        >
          <FormattedMessage
            defaultMessage="Scheme Description:"
            id="admin.permissions.teamScheme.schemeDescriptionLabel"
            values={Object {}}
          />
        </label>
        <textarea
          className="form-control"
          id="scheme-description"
          onChange={[Function]}
          placeholder="Scheme Description"
          rows="5"
          value="Test scheme description"
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Select teams to override permissions"
            id="admin.permissions.teamScheme.selectTeamsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Select teams where permission exceptions are required."
            id="admin.permissions.teamScheme.selectTeamsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <a
          className="btn btn-primary"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Add Teams"
            id="admin.permissions.teamScheme.addTeams"
            values={Object {}}
          />
        </a>
      </div>
    </div>
    <div
      className="teams-list"
    >
      <div
        className="no-team-schemes"
      >
        <FormattedMessage
          defaultMessage="No team selected. Please add teams to this list."
          id="admin.permissions.teamScheme.noTeams"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block all_users "
    id="all_users"
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="All Members"
            id="admin.permissions.systemScheme.allMembersTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to all members, including administrators and newly created users."
            id="admin.permissions.systemScheme.allMembersDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      role={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
      selected={null}
    />
  </div>
  <div
    className="permissions-block channel_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Channel Administrators"
            id="admin.permissions.systemScheme.channelAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to channel creators and any users promoted to Channel Administrator."
            id="admin.permissions.systemScheme.channelAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      role={
        Object {
          "permissions": Array [
            "delete_post",
          ],
        }
      }
      scope="channel_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="permissions-block team_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Administrators"
            id="admin.permissions.systemScheme.teamAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to team creators and any users promoted to Team Administrator."
            id="admin.permissions.systemScheme.teamAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      role={
        Object {
          "permissions": Array [
            "add_user_to_team",
          ],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="admin-console-save"
  >
    <SaveButton
      btnClass="btn-primary"
      defaultMessage="Save"
      disabled={true}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Saving Config..."
    />
    <Connect(BlockableLink)
      className="cancel-button"
      to="/admin_console/permissions/schemes"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="admin.permissions.permissionSchemes.cancel"
        values={Object {}}
      />
    </Connect(BlockableLink)>
    <div
      className="error-message"
    >
      <FormError
        error={null}
        errors={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on edit with permissions 2`] = `
Object {
  "all_users": Object {
    "displayName": "All members",
    "name": "all_users",
    "permissions": Array [
      "invite_user",
      "add_reaction",
    ],
  },
  "channel_admin": Object {
    "permissions": Array [
      "delete_post",
    ],
  },
  "team_admin": Object {
    "permissions": Array [
      "add_user_to_team",
    ],
  },
}
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on edit without permissions 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header with-back"
  >
    <Connect(BlockableLink)
      className="fa fa-chevron-left back"
      to="/admin_console/permissions/schemes"
    />
    <FormattedMessage
      defaultMessage="Team Scheme"
      id="admin.permissions.teamScheme"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="[Team Override Schemes](!https://about.mattermost.com/default-team-override-scheme) set the permissions for Team Admins, Channel Admins and other members in specific teams. Use a Team Override Scheme when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
          id="admin.permissions.teamScheme.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Scheme Details"
            id="admin.permissions.teamScheme.schemeDetailsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the name and description for this scheme."
            id="admin.permissions.teamScheme.schemeDetailsDescription"
            values={Object {}}
          />
        </span>
      </div>
    </div>
    <div
      className="team-scheme-details"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-name"
        >
          <FormattedMessage
            defaultMessage="Scheme Name:"
            id="admin.permissions.teamScheme.schemeNameLabel"
            values={Object {}}
          />
        </label>
        <input
          className="form-control"
          id="scheme-name"
          onChange={[Function]}
          placeholder="Scheme Name"
          type="text"
          value="Test scheme"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-description"
        >
          <FormattedMessage
            defaultMessage="Scheme Description:"
            id="admin.permissions.teamScheme.schemeDescriptionLabel"
            values={Object {}}
          />
        </label>
        <textarea
          className="form-control"
          id="scheme-description"
          onChange={[Function]}
          placeholder="Scheme Description"
          rows="5"
          value="Test scheme description"
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Select teams to override permissions"
            id="admin.permissions.teamScheme.selectTeamsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Select teams where permission exceptions are required."
            id="admin.permissions.teamScheme.selectTeamsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <a
          className="btn btn-primary"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Add Teams"
            id="admin.permissions.teamScheme.addTeams"
            values={Object {}}
          />
        </a>
      </div>
    </div>
    <div
      className="teams-list"
    >
      <div
        className="no-team-schemes"
      >
        <FormattedMessage
          defaultMessage="No team selected. Please add teams to this list."
          id="admin.permissions.teamScheme.noTeams"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block all_users "
    id="all_users"
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="All Members"
            id="admin.permissions.systemScheme.allMembersTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to all members, including administrators and newly created users."
            id="admin.permissions.systemScheme.allMembersDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      role={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
      selected={null}
    />
  </div>
  <div
    className="permissions-block channel_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Channel Administrators"
            id="admin.permissions.systemScheme.channelAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to channel creators and any users promoted to Channel Administrator."
            id="admin.permissions.systemScheme.channelAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      role={
        Object {
          "permissions": Array [],
        }
      }
      scope="channel_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="permissions-block team_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Administrators"
            id="admin.permissions.systemScheme.teamAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to team creators and any users promoted to Team Administrator."
            id="admin.permissions.systemScheme.teamAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      role={
        Object {
          "permissions": Array [],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="admin-console-save"
  >
    <SaveButton
      btnClass="btn-primary"
      defaultMessage="Save"
      disabled={true}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Saving Config..."
    />
    <Connect(BlockableLink)
      className="cancel-button"
      to="/admin_console/permissions/schemes"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="admin.permissions.permissionSchemes.cancel"
        values={Object {}}
      />
    </Connect(BlockableLink)>
    <div
      className="error-message"
    >
      <FormError
        error={null}
        errors={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on edit without permissions 2`] = `
Object {
  "all_users": Object {
    "displayName": "All members",
    "name": "all_users",
    "permissions": Array [],
  },
  "channel_admin": Object {
    "permissions": Array [],
  },
  "team_admin": Object {
    "permissions": Array [],
  },
}
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on new with default roles with permissions 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header with-back"
  >
    <Connect(BlockableLink)
      className="fa fa-chevron-left back"
      to="/admin_console/permissions/schemes"
    />
    <FormattedMessage
      defaultMessage="Team Scheme"
      id="admin.permissions.teamScheme"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="[Team Override Schemes](!https://about.mattermost.com/default-team-override-scheme) set the permissions for Team Admins, Channel Admins and other members in specific teams. Use a Team Override Scheme when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
          id="admin.permissions.teamScheme.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Scheme Details"
            id="admin.permissions.teamScheme.schemeDetailsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the name and description for this scheme."
            id="admin.permissions.teamScheme.schemeDetailsDescription"
            values={Object {}}
          />
        </span>
      </div>
    </div>
    <div
      className="team-scheme-details"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-name"
        >
          <FormattedMessage
            defaultMessage="Scheme Name:"
            id="admin.permissions.teamScheme.schemeNameLabel"
            values={Object {}}
          />
        </label>
        <input
          className="form-control"
          id="scheme-name"
          onChange={[Function]}
          placeholder="Scheme Name"
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-description"
        >
          <FormattedMessage
            defaultMessage="Scheme Description:"
            id="admin.permissions.teamScheme.schemeDescriptionLabel"
            values={Object {}}
          />
        </label>
        <textarea
          className="form-control"
          id="scheme-description"
          onChange={[Function]}
          placeholder="Scheme Description"
          rows="5"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Select teams to override permissions"
            id="admin.permissions.teamScheme.selectTeamsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Select teams where permission exceptions are required."
            id="admin.permissions.teamScheme.selectTeamsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <a
          className="btn btn-primary"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Add Teams"
            id="admin.permissions.teamScheme.addTeams"
            values={Object {}}
          />
        </a>
      </div>
    </div>
    <div
      className="teams-list"
    >
      <div
        className="no-team-schemes"
      >
        <FormattedMessage
          defaultMessage="No team selected. Please add teams to this list."
          id="admin.permissions.teamScheme.noTeams"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block all_users "
    id="all_users"
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="All Members"
            id="admin.permissions.systemScheme.allMembersTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to all members, including administrators and newly created users."
            id="admin.permissions.systemScheme.allMembersDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      role={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
      selected={null}
    />
  </div>
  <div
    className="permissions-block channel_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Channel Administrators"
            id="admin.permissions.systemScheme.channelAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to channel creators and any users promoted to Channel Administrator."
            id="admin.permissions.systemScheme.channelAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      role={
        Object {
          "permissions": Array [
            "delete_post",
          ],
        }
      }
      scope="channel_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="permissions-block team_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Administrators"
            id="admin.permissions.systemScheme.teamAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to team creators and any users promoted to Team Administrator."
            id="admin.permissions.systemScheme.teamAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [
            "invite_user",
            "add_reaction",
          ],
        }
      }
      role={
        Object {
          "permissions": Array [
            "add_user_to_team",
          ],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="admin-console-save"
  >
    <SaveButton
      btnClass="btn-primary"
      defaultMessage="Save"
      disabled={true}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Saving Config..."
    />
    <Connect(BlockableLink)
      className="cancel-button"
      to="/admin_console/permissions/schemes"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="admin.permissions.permissionSchemes.cancel"
        values={Object {}}
      />
    </Connect(BlockableLink)>
    <div
      className="error-message"
    >
      <FormError
        error={null}
        errors={Array []}
      />
    </div>
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on new with default roles with permissions 2`] = `
Object {
  "addTeamOpen": false,
  "openRoles": Object {
    "all_users": true,
    "channel_admin": true,
    "team_admin": true,
  },
  "roles": null,
  "saveNeeded": false,
  "saving": false,
  "selectedPermission": null,
  "serverError": null,
  "teams": null,
}
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should match snapshot on new with default roles without permissions 1`] = `
Object {
  "all_users": Object {
    "displayName": "All members",
    "name": "all_users",
    "permissions": Array [],
  },
  "channel_admin": Object {
    "permissions": Array [],
  },
  "team_admin": Object {
    "permissions": Array [],
  },
}
`;

exports[`components/admin_console/permission_schemes_settings/permission_team_scheme_settings/permission_team_scheme_settings should save each role on save clicked except system_admin role 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header with-back"
  >
    <Connect(BlockableLink)
      className="fa fa-chevron-left back"
      to="/admin_console/permissions/schemes"
    />
    <FormattedMessage
      defaultMessage="Team Scheme"
      id="admin.permissions.teamScheme"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <InjectIntl(FormattedMarkdownMessage)
          defaultMessage="[Team Override Schemes](!https://about.mattermost.com/default-team-override-scheme) set the permissions for Team Admins, Channel Admins and other members in specific teams. Use a Team Override Scheme when specific teams need permission exceptions to the [System Scheme](!https://about.mattermost.com/default-system-scheme)."
          id="admin.permissions.teamScheme.introBanner"
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Scheme Details"
            id="admin.permissions.teamScheme.schemeDetailsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the name and description for this scheme."
            id="admin.permissions.teamScheme.schemeDetailsDescription"
            values={Object {}}
          />
        </span>
      </div>
    </div>
    <div
      className="team-scheme-details"
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-name"
        >
          <FormattedMessage
            defaultMessage="Scheme Name:"
            id="admin.permissions.teamScheme.schemeNameLabel"
            values={Object {}}
          />
        </label>
        <input
          className="form-control"
          id="scheme-name"
          onChange={[Function]}
          placeholder="Scheme Name"
          type="text"
          value=""
        />
      </div>
      <div
        className="form-group"
      >
        <label
          className="control-label"
          htmlFor="scheme-description"
        >
          <FormattedMessage
            defaultMessage="Scheme Description:"
            id="admin.permissions.teamScheme.schemeDescriptionLabel"
            values={Object {}}
          />
        </label>
        <textarea
          className="form-control"
          id="scheme-description"
          onChange={[Function]}
          placeholder="Scheme Description"
          rows="5"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Select teams to override permissions"
            id="admin.permissions.teamScheme.selectTeamsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Select teams where permission exceptions are required."
            id="admin.permissions.teamScheme.selectTeamsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <a
          className="btn btn-primary"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Add Teams"
            id="admin.permissions.teamScheme.addTeams"
            values={Object {}}
          />
        </a>
      </div>
    </div>
    <div
      className="teams-list"
    >
      <div
        className="no-team-schemes"
      >
        <FormattedMessage
          defaultMessage="No team selected. Please add teams to this list."
          id="admin.permissions.teamScheme.noTeams"
          values={Object {}}
        />
      </div>
    </div>
  </div>
  <div
    className="permissions-block all_users "
    id="all_users"
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="All Members"
            id="admin.permissions.systemScheme.allMembersTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to all members, including administrators and newly created users."
            id="admin.permissions.systemScheme.allMembersDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      role={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
      selected={null}
    />
  </div>
  <div
    className="permissions-block channel_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Channel Administrators"
            id="admin.permissions.systemScheme.channelAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to channel creators and any users promoted to Channel Administrator."
            id="admin.permissions.systemScheme.channelAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      role={
        Object {
          "permissions": Array [],
        }
      }
      scope="channel_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="permissions-block team_admin "
  >
    <div
      className="header"
      onClick={[Function]}
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Administrators"
            id="admin.permissions.systemScheme.teamAdminsTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Permissions granted to team creators and any users promoted to Team Administrator."
            id="admin.permissions.systemScheme.teamAdminsDescription"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <AccordionToggleIcon />
      </div>
    </div>
    <PermissionsTree
      onToggle={[Function]}
      parentRole={
        Object {
          "displayName": "All members",
          "name": "all_users",
          "permissions": Array [],
        }
      }
      role={
        Object {
          "permissions": Array [],
        }
      }
      scope="team_scope"
      selectRow={[Function]}
    />
  </div>
  <div
    className="admin-console-save"
  >
    <SaveButton
      btnClass="btn-primary"
      defaultMessage="Save"
      disabled={true}
      extraClasses=""
      onClick={[Function]}
      saving={false}
      savingMessage="Saving Config..."
    />
    <Connect(BlockableLink)
      className="cancel-button"
      to="/admin_console/permissions/schemes"
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="admin.permissions.permissionSchemes.cancel"
        values={Object {}}
      />
    </Connect(BlockableLink)>
    <div
      className="error-message"
    >
      <FormError
        error={null}
        errors={Array []}
      />
    </div>
  </div>
</div>
`;
